--- a/admin_ui/index.html
+++ b/admin_ui/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Belservice • Dashboard</title>
+<title>SARA • Dashboard</title>
 <style>
   :root{--bg1:#e9f2eb;--bg2:#efe8e6;--card:#fff;--ink:#0f1720;--muted:#6b7280;--line:#e5e7eb;--green:#138a43;--red:#c52e34}
   body{margin:0;font-family:Inter,system-ui,sans-serif;color:var(--ink);
@@ -31,7 +31,7 @@
     <header>
       <div class="brand">
         <div class="flag"></div>
-        <h1>Belservice • Dashboard</h1>
+        <h1>SARA • Dashboard</h1>
       </div>
       <div class="login-status">
         <span>Ingelogd als admin</span>
@@ -43,7 +43,7 @@
     <div class="grid">
       <section class="card">
         <h2>Live instellingen</h2>
-        <p>Beheer Mada belassistent.</p>
+        <p>Beheer SARA belassistent.</p>
         <a class="cta green" href="live.html">Open live instellingen</a>
       </section>
 
